@@ -48,4 +48,14 @@ class RedPajamaCppEmbedder implements Embedder {
     {
         return -1;
     }
+
+    public function encode_query(array|string $text) : array
+    {
+        return $this->encode($text);
+    }
+
+    public function is_asymmetric() : bool
+    {
+        return false;
+    }
 }
