@@ -54,4 +54,14 @@ class RophertaEmbedder extends \Textualization\Ropherta\RophertaModel implements
     {
         return $this->input_size;
     }
+
+    public function encode_query(array|string $text) : array
+    {
+        return $this->encode($text);
+    }
+
+    public function is_asymmetric() : bool
+    {
+        return false;
+    }    
 }
