@@ -30,6 +30,7 @@ class VectorIndexTest extends IndexTestBase {
         # 0.03822366623088808   (output_1 0 0)
         # 0.04232106750024146   (mean pooling)
         # 0.00733371290099728   (mean pooling with padding)
+        # 0.8699910374529284    (xlm - multilingual-e5-small)
         # 0.9245769311666672    (distilroberta)
         $this->_test_mrr($index, $title_url, 0.92, 0.93);
 
