@@ -1,3 +1,10 @@
+semantic-search (0.0.2)
+
+	* Multilingual version
+
+-- Pablo Duboue, 2024/02/12
+
+
 semantic-search (0.0.1)
 
 	* Initial version
